# django-order-system

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/accounts/: admin.py  apis.py  models.py  permissions.py  repositories.py  services.py  urls.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templates/: email_verification.html
apps/apis/: exception_handler.py  pagination.py  schema_utils.py  serializers.py  urls.py  utils.py
apps/orders/: admin.py  apis.py  invoices.py  models.py  repositories.py  services.py  tasks.py  urls.py
apps/orders/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_invoice.py
apps/products/: admin.py  apis.py  models.py  repositories.py  services.py  urls.py
apps/products/migrations/: 0001_initial.py  0002_product_idx_product_price.py  0003_remove_product_idx_product_seller.py
apps/sellers/: apis.py  services.py  urls.py
apps/utils/: base_repo.py  exceptions.py
config/: celery.py  env.py  urls.py
config/django/: base.py  local.py  production.py  test.py
config/settings/: celery.py  debug_toolbar.py  drf.py  drf_spectacular.py  mail.py  redis.py  simple_jwt.py
docker/: .dockerignore  Dockerfile  web_entrypoint.sh
src/config/: settings.py
tests/: conftest.py  factories.py
tests/accounts/: conftest.py  test_apis.py  test_services.py
tests/orders/: conftest.py  test_apis.py  test_services.py
tests/products/: conftest.py  test_apis.py  test_services.py
tests/sellers/: conftest.py  test_services.py
