[project]
name = "django-order-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "django-environ>=0.12.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "drf-spectacular>=0.28.0",
    "psycopg[binary]>=3.2.4",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.0.1",
]
